src/test/valid/extensionTests/forLoops/forRmStyleAdd.wacc
# register machine style addition

# Output:
# initial value of x: 3
# (+)(+)(+)(+)(+)(+)(+)
# final value of x: 10

# Program:

begin
  int x = 3 ;
  int y = 7 ;
  print "initial value of x: " ;
  println x ;
  for(int i = y; i > 0; i = i-1) do
    print "(+)" ;
    x = x + 1
  done ;
  println "" ;
  print "final value of x: " ;
  println x
end
