src/test/invalid/syntaxErr/extensionTests/forLoops/missingDone.wacc
begin
  int i = 4; 
  for(int i = 0; i < 3; i = i+1) do
    println i
end
